fixed gap

--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ section {
     padding-top: 5px;
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
 
 
